fixed z-index

--- a/Client/src/screens/Home.css
+++ b/Client/src/screens/Home.css
@@ -34,6 +34,7 @@
   line-height: 30px;
   padding-top: 5px;
   margin-left: -50px;
+  z-index: 100;
 }
 
 .ticks p {
